# dotfiles

./: .editorconfig  .gitignore  .gitlab-ci.yml  .personal-env  .vimrc  README.md  gitconfig.aliases  install  personal-env  personal-env.aliases.bash  personal-env.environment.bash  personal-env.functions-git.bash  personal-env.functions-media.bash  personal-env.functions-scan.bash  personal-env.functions-server.bash  personal-env.functions.bash  personal-env.prompt.bash  pyproject.toml  stop-the-warnings.diff  uninstall
.github/workflows/: ci.yml
config/: .editorconfig  .vimrc  gitconfig.aliases
config/bash/: .bashrc
config/shell_common/: aliases.sh  darwin.aliases.sh  env.sh  exports.sh  functions.bash  helpers.bash  linux.aliases.sh
config/zsh/: .p10k-lean.zsh  .p10k-pretty.zsh  .p10k.zsh  .zshenv  .zshrc
test/: python-lint.py  shellcheck-run.sh
