[project]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = [
    {name = "Ankit Patterson",email = "dev+dotfiles@weirdion.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.black]
line-length = 100
target-version = ['py39']
